Fixed blurry loading being white on the edges

--- a/src/components/05__blurry-loading/style/style.css
+++ b/src/components/05__blurry-loading/style/style.css
@@ -9,18 +9,21 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100vw;
   height: 100vh;
   overflow: hidden;
   margin: 0;
+  position: relative;
 }
 
 .app-05 .bg {
   background: url('https://images.unsplash.com/photo-1576161787924-01bb08dad4a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2104&q=80') no-repeat center center/cover;
   position: absolute;
-  top: -30px;
-  left: -30px;
-  width: calc(100vw + 60px);
-  height: calc(100vh + 60px);
+  top: -60px;
+  left: -60px;
+  right: -60px;
+  bottom: -60px;
+  overflow: hidden;
   z-index: -1;
   filter: blur(0px);
 }
